force-app/main/default/objects/Sales_Rep_Assignment__c/Sales_Rep_Assignment__c.object-meta.xml
<CustomObject>
    <description>Configuration records that control intelligent Lead assignment to Sales Reps</description>
    <fields>
        <fullName>Current_Lead_Count__c</fullName>
        <label>Current Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Assignment_DateTime__c</fullName>
        <label>Last Assignment DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Specialty__c</fullName>
        <label>Lead Source Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Lead_Capacity__c</fullName>
        <label>Max Lead Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Rep Assignment</label>
    <nameField>
        <displayFormat>REP-{00000}</displayFormat>
        <label>Sales Rep Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>