force-app/main/default/objects/Sales_Rep_Assignment__c/fields/Current_Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Lead_Count__c</fullName>
    <label>Current Lead Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>