force-app/main/default/objects/Sales_Rep_Assignment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Only active reps are considered for assignment</description>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Set to true to include this rep in assignment</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>