force-app/main/default/objects/Sales_Rep_Assignment__c/fields/Last_Assignment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_DateTime__c</fullName>
    <label>Last Assignment DateTime</label>
    <type>DateTime</type>
</CustomField>