force-app/main/default/objects/Sales_Rep_Assignment__c/fields/Lead_Source_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Specialty__c</fullName>
    <label>Lead Source Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>