force-app/main/default/objects/Sales_Rep_Assignment__c/fields/Max_Lead_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Lead_Capacity__c</fullName>
    <label>Max Lead Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>