force-app/main/default/objects/Sales_Rep_Assignment__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory for which the rep receives leads</description>
    <inlineHelpText>Territory alignment for this rep</inlineHelpText>
    <label>Territory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
        <valueSetName/>
    </valueSet>
</CustomField>