force-app/main/default/objects/Sales_Rep_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Target User to assign Leads to</description>
    <inlineHelpText>Select the Sales User who will receive assigned Leads</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Rep Assignments</relationshipLabel>
    <relationshipName>Sales_Rep_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>